# italo-gui

./: .gitignore  .gitmodules  CMakeLists.txt  DEPLOY.md  LICENSE  LeftPanel.qml  Logger.cpp  Makefile  MiddlePanel.qml  README.md  RightPanel.qml  TranslationManager.cpp  build.sh  clipboardAdapter.cpp  clipboardAdapter.h  filter.cpp  filter.h  get_libwallet_api.sh  ios_get_libwallet.api.sh  italo-wallet-gui.pro  italocoin-wallet-gui.pro  main.cpp  main.qml  oshelper.cpp  oshelper.h  qml.qrc  start-low-graphics-mode.bat  windeploy_helper.sh
android/: README.md
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  CheckTrezor.cmake  Doxyfile.in  FindCcache.cmake  FindUnbound.cmake  GenVersion.cmake  GenVersionGui.cmake  GitGetVersionTag.cmake  Version.cmake  VersionGui.cmake  test-libusb-version.c  test-protobuf.cpp  test-static-assert.cpp
components/: AddressBookTable.qml  AdvancedOptionsItem.qml  CheckBox.qml  CheckBox2.qml  ContextMenu.qml  ContextMenuItem.qml  DaemonConsole.qml  DaemonManagerDialog.qml  DashboardTable.qml  DatePicker.qml  DevicePassphraseDialog.qml  HistoryTable.qml  HistoryTableInnerColumn.qml  HistoryTableMobile.qml  IconButton.qml  InlineButton.qml  Input.qml  InputDialog.qml  InputMulti.qml  Label.qml  LabelButton.qml  LabelSubheader.qml  LanguageSidebar.qml  LineEdit.qml  LineEditMulti.qml  MenuButton.qml  MenuButtonDivider.qml  MobileHeader.qml  NetworkStatusItem.qml  NewPasswordDialog.qml  Notifier.qml  PassphraseDialog.qml  PasswordDialog.qml  PrivacyLevel.qml  PrivacyLevelSmall.qml  ProcessingSplash.qml  ProgressBar.qml  QRCodeScanner.qml  RadioButton.qml  RemoteNodeEdit.qml  (+18 more)
images/: appicon.icns
js/: TxUtils.js  Wizard.js
pages/: Account.qml  AddressBook.qml  Dashboard.qml  History.qml  Keys.qml  Mining.qml  Receive.qml  SharedRingDB.qml  Sign.qml  Transfer.qml  TxKey.qml
share/: Info.plist
src/: CMakeLists.txt  NetworkType.h  TranslationManager.cpp  TranslationManager.h
src/QR-Code-generator/: BitBuffer.cpp  BitBuffer.hpp  QrCode.cpp  QrCode.hpp  QrSegment.cpp  QrSegment.hpp
src/QR-Code-scanner/: QrCodeScanner.cpp  QrCodeScanner.h  QrScanThread.cpp  QrScanThread.h
src/daemon/: DaemonManager.cpp  DaemonManager.h
src/libwalletqt/: AddressBook.cpp  AddressBook.h  PassphraseHelper.cpp  PassphraseHelper.h  PendingTransaction.cpp  PendingTransaction.h  QRCodeImageProvider.cpp  QRCodeImageProvider.h  Subaddress.cpp  Subaddress.h  SubaddressAccount.cpp  SubaddressAccount.h  TransactionHistory.cpp  TransactionHistory.h  TransactionInfo.cpp  TransactionInfo.h  Transfer.h  UnsignedTransaction.cpp  UnsignedTransaction.h  Wallet.cpp  Wallet.h  WalletListenerImpl.cpp  WalletListenerImpl.h  WalletManager.cpp  WalletManager.h
src/main/: Logger.cpp  Logger.h  MainApp.cpp  MainApp.h  clipboardAdapter.h  filter.cpp  filter.h  main.cpp  oscursor.cpp  oscursor.h  oshelper.cpp  oshelper.h
src/model/: AddressBookModel.cpp  AddressBookModel.h  SubaddressAccountModel.cpp  SubaddressAccountModel.h  SubaddressModel.cpp  SubaddressModel.h  TransactionHistoryModel.cpp  TransactionHistoryModel.h  TransactionHistorySortFilterModel.cpp  TransactionHistorySortFilterModel.h
src/openpgp/: CMakeLists.txt  hash.h  mpi.h  openpgp.cpp  openpgp.h  packet_stream.h  s_expression.h  serialization.h
src/qt/: ItaloSettings.cpp  ItaloSettings.h  KeysFiles.cpp  KeysFiles.h  TailsOS.cpp  downloader.cpp  downloader.h  ipc.cpp  ipc.h  macoshelper.h  macoshelper.mm  mime.cpp  mime.h  network.cpp  network.h  prices.cpp  updater.cpp  updater.h  utils.cpp  utils.h
src/zxcvbn-c/: zxcvbn.c  zxcvbn.h
tabs/: TweetsModel.qml  Twitter.qml
translations/: italo-core.ts  italo-core_ar.ts  italo-core_bg.ts  italo-core_bn.ts  italo-core_cat.ts  italo-core_cs.ts  italo-core_da.ts  italo-core_de.ts  italo-core_el.ts  italo-core_eo.ts  italo-core_es.ts  italo-core_fa.ts  italo-core_fi.ts  italo-core_fr.ts  italo-core_ga.ts  italo-core_he.ts  italo-core_hi.ts  italo-core_hr.ts  italo-core_hu.ts  italo-core_id.ts  italo-core_is.ts  italo-core_it.ts  italo-core_ja.ts  italo-core_kmr.ts  italo-core_ko.ts  italo-core_lt.ts  italo-core_nb_NO.ts  italo-core_ne.ts  italo-core_nl.ts  italo-core_pl.ts  italo-core_prt.ts  italo-core_pt-br.ts  italo-core_pt-pt.ts  italo-core_ro.ts  italo-core_ru.ts  italo-core_sk.ts  italo-core_sl.ts  italo-core_sr.ts  italo-core_sv.ts  italo-core_tr.ts  (+42 more)
wizard/: WizardAskPassword.qml  WizardConfigure.qml  WizardController.qml  WizardCreateDevice1.qml  WizardCreateViewOnlyWallet.qml  WizardCreateWallet.qml  WizardCreateWallet1.qml  WizardCreateWallet2.qml  WizardCreateWallet3.qml  WizardCreateWallet4.qml  WizardCreateWalletFromDevice.qml  WizardDaemonSettings.qml  WizardDonation.qml  WizardFinish.qml  WizardHeader.qml  WizardHome.qml  WizardLang.qml  WizardLanguage.qml  WizardMain.qml  WizardManageWalletUI.qml  WizardMemoTextInput.qml  WizardMenuItem.qml  WizardModeBootstrap.qml  WizardModeRemoteNodeWarning.qml  WizardModeSelection.qml  WizardNav.qml  WizardNavProgressDot.qml  WizardOpenWallet1.qml  WizardOptions.qml  WizardPassword.qml  (+11 more)
(+24 files in other folders)
